signed-container-supply-chain-enforcement/k8s/signed-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: signed-api
  namespace: default
  labels:
    security-test: signed
spec:
  containers:
  - name: api
    image: localhost:5000/supply-chain-api@sha256:4f25b2e9941aa63c47688fbf878022ce247f158b4f82b89b2707e3ecb51f3dbe
    imagePullPolicy: Never
    ports:
    - containerPort: 8080
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      runAsUser: 10001
      capabilities:
        drop:
        - ALL
