signed-container-supply-chain-enforcement/k8s/unsigned-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsigned-nginx
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:latest
    imagePullPolicy: Never
