signed-container-supply-chain-enforcement/k8s/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: signature-policy
webhooks:
- name: signatures.supply-chain.security
  admissionReviewVersions:
  - v1
  sideEffects: None
  failurePolicy: Fail
  timeoutSeconds: 10
  matchPolicy: Equivalent
  clientConfig:
    service:
      namespace: supply-chain-security
      name: signature-policy
      path: /validate
      port: 443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR2akNDQXFhZ0F3SUJBZ0lVYjdUeFhLeGlWOUE1eDZDc1djL3BBVmhSODU4d0RRWUpLb1pJaHZjTkFRRUwKQlFBd05URXpNREVHQTFVRUF3d3FjMmxuYm1GMGRYSmxMWEJ2YkdsamVTNXpkWEJ3YkhrdFkyaGhhVzR0YzJWagpkWEpwZEhrdWMzWmpNQjRYRFRJMk1Ea3hOakU0TlRVeU5Wb1hEVEkzTURreE5qRTROVFV5TlZvd05URXpNREVHCkExVUVBd3dxYzJsbmJtRjBkWEpsTFhCdmJHbGplUzV6ZFhCd2JIa3RZMmhoYVc0dGMyVmpkWEpwZEhrdWMzWmoKTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFpYjcxdFFWNHE0RnZRaGtxUGJRdwp5dkZKSzZoeXNEaG [...]
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: In
      values:
      - default
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: Namespaced
